# RPG_planner

./: CMakeLists.txt  RPG_planner.pro  achievementform.cpp  achievementform.h  achievementform.ui  app.qrc  helpwidget.h  helpwidget.ui  itemeditor.cpp  itemeditor.h  itemeditor.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  skillsform.cpp  skillsform.h  skillsform.ui  taskitem.cpp  taskitem.h  taskitem.ui  tasksform.cpp  tasksform.h  tasksform.ui  userwidget.h  userwidget.ui
resources/: app.rc
